--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -4,9 +4,9 @@
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
   </head>
   <body>
-    <h1>Welcome to quartersdiscovery.com, <%= @user.name %></h1>
+    <h1>Welcome to The World Wide Web, <%= @user.name %></h1>
     <p>
-      You have successfully signed up to quartersdiscovery.com,
+      You have successfully signed up to this demo site,
       your username is: <%= @user.name %>.<br/>
     </p>
     <p>
